--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,7 +10,7 @@ concurrency: ${{github.workflow}}-${{ github.ref}}
 jobs:
   publish:
     runs-on: ubuntu-latest
-    setups:
+    steps:
       - uses: actions/checkout@v3
       - uses: pnpm/action-setup@v2
       - with:
